# test

./: CMakeLists.txt  QUICK_REFERENCE.md  README.md  README_SYSTEM.md
include/: AutomationController.h  ChemicalTreatment.h  FiltrationSystem.h  QualityMonitor.h  SensorManager.h
src/: AutomationController.cpp  ChemicalTreatment.cpp  FiltrationSystem.cpp  QualityMonitor.cpp  SensorManager.cpp  main.cpp
